--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
     "start": "parcel",
-    "build": "parcel build"
+    "build": "parcel build",
+    "predeploy": "rm -rf dist && parcel build ./*.html --public-url https://rpill.github.io/esquery-babel/",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
